...
    case endgame

    var id: String { rawValue }

    var title: String {
        switch self {
        case .mateIn1: "Mate in 1"
        case .mateIn2: "Mate in 2"
        case .fork: "Forks"
        case .pin: "Pins"
        case .hangingPiece: "Hanging Pieces"
        case .endgame: "Endgames"
        }
    }

...
